# sqrmat_package

./: README.md  pyproject.toml  sqrmat_method.py
sqrmat_method/: sqrmat_method.py
