[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_marix_method"
version = "0.0.1"
authors = [
  { name="Kelly Anderson", email="anderske@frib.msu.edu" },
]
description = "A package to use for the square matrix method"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anderske-msu/Library"
"Bug Tracker" = "https://github.com/anderske-msu/Library/issues"