[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "square-marix-method"
version = "0.0.1"
authors = [{ name = "Kelly Anderson", email = "kjanderson24@proton.me" }]
description = "A package to use for the square matrix method"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy", "sympy", "python-library-kjanderson248"]         # "PyTPSA"

[project.urls]
"Bug Tracker" = "https://github.com/anderske-msu/sqrmat_package/issues"
Homepage = "https://github.com/anderske-msu/sqrmat_package"
